--- a/accueil.html
+++ b/accueil.html
@@ -1,162 +1,1 @@
-Mon site Github de la classe de SNT
-
-</html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Mi Página Web Linda y SAGRADAAAAAA</title>
-    <style>
-        /* Estilos Generales */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f9;
-            color: #333;
-        }
-
-        header {
-            background-color: #4CAF50;
-            color: white;
-            text-align: center;
-            padding: 10px 0;
-        }
-
-        nav {
-            background-color: #333;
-            overflow: hidden;
-        }
-
-        nav a {
-            color: white;
-            padding: 14px 20px;
-            text-decoration: none;
-            text-align: center;
-            display: inline-block;
-        }
-
-        nav a:hover {
-            background-color: #ddd;
-            color: black;
-        }
-
-        /* Contenedor principal */
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-
-        .hero {
-            background: url('https://xx-jacobo-dios-de-la-tierra-xx.github.io/chatgpt.html') no-repeat center center/cover;
-            color: white;
-            text-align: center;
-            padding: 60px 20px;
-        }
-
-        .hero h1 {
-            font-size: 3em;
-            margin-bottom: 10px;
-        }
-
-        .hero p {
-            font-size: 1.5em;
-        }
-
-        .section-title {
-            text-align: center;
-            font-size: 2em;
-            margin-bottom: 20px;
-        }
-
-        .cards {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-            gap: 20px;
-        }
-
-        .card {
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            overflow: hidden;
-            text-align: center;
-            padding: 20px;
-        }
-
-        .card img {
-            width: 100%;
-            border-radius: 8px;
-        }
-
-        .card h3 {
-            margin-top: 10px;
-            font-size: 1.5em;
-        }
-
-        .footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 10px 0;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-        }
-
-    </style>
-</head>
-<body>
-
-<header>
-    <h1>Bienvenido a La Página Web del DIOS DE LA TIERRAAAAA</h1>
-</header>
-
-<nav>
-    <a href="#inicio">Inicio</a>
-    <a href="#acerca">Acerca de</a>
-    <a href="#proyectos">Proyectos</a>
-</nav>
-
-<section class="hero">
-    <h1>ESTO MERECE MÁS DE 20 AAAAAAAAAAAAAHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH</h1>
-    <p>EL PROXIMO BILL GATES</p>
-</section>
-
-<div class="container">
-
-    <section id="acerca">
-        <h2 class="section-title">Sobre mí</h2>
-        <p>Hola, soy DIOS, y esta es mi página donde muestro un poco de mi PODEEEEEEEEEER. ¡Espero que SUFRAAAAAAAAAAAAS!</p>
-    </section>
-
-    <section id="proyectos">
-        <h2 class="section-title">Proyectos Destacados</h2>
-        <div class="cards">
-            <div class="card">
-                <img src="https://via.placeholder.com/300x200" alt="Proyecto 1">
-                <h3>CREAR EL UNIVERSOOOOO</h3>
-                <p>CREEE TODOOOOOOOO</p>
-            </div>
-            <div class="card">
-                <img src="https://via.placeholder.com/300x200" alt="Proyecto 2">
-                <h3>CREAR EL SOL Y LA LUNAAAAAAAAA</h3>
-                <p>CREE EL SOL Y LA LUNAAAAAAAA</p>
-            </div>
-            <div class="card">
-                <img src="https://via.placeholder.com/300x200" alt="Proyecto 3">
-                <h3>CREAR LA TIERRA Y LOS ANIMALES</h3>
-                <p>CREE LA RAZA HUMANA, LOS ANIMALES Y LA TIERRAAAAAAAAAAA</p>
-            </div>
-        </div>
-    </section>
-
-</div>
-
-<footer class="footer">
-    <p>&copy; 2025 YHWE | Todos los derechos reservados a DIOOOOOOOOOOOS.</p>
-</footer>
-
-</body>
-</html>
+mon site web sur git hub
